--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
       "express": "^4.18.2",
       "mysql2": "^3.0.0",
       "dotenv": "^16.0.0",
-      "swagger-ui-express": "^4.6.0"
+      "swagger-ui-express": "^4.6.0",
+      "express-validator": "^6.15.0"
     }
   }
   
