--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,6 +14,8 @@ services:
     volumes:
       - db_data:/var/lib/mysql
       - ./init.sql:/docker-entrypoint-initdb.d/init.sql
+    networks:
+      - hydra-net
 
   api:
     build: .
@@ -22,12 +24,71 @@ services:
       - "3000:3000"
     depends_on:
       - db
+      - hydra-public
+      - hydra-admin
     environment:
       DB_HOST: db
       DB_USER: user
       DB_PASSWORD: userpass
       DB_NAME: school
       PORT: 3000
+      JWT_ISSUER: http://hydra-public:4444
+      JWT_SECRET: thisaverysecretkey123  
+    networks:
+      - hydra-net
+
+  postgres:
+    image: postgres:15
+    environment:
+      POSTGRES_USER: hydra
+      POSTGRES_PASSWORD: secret
+      POSTGRES_DB: hydra
+    volumes:
+      - hydra-data:/var/lib/postgresql/data
+    networks:
+      - hydra-net
+
+  hydra-migrate:
+    image: oryd/hydra:v2.2
+    depends_on:
+      - postgres
+    environment:
+      - DSN=postgres://hydra:secret@postgres:5432/hydra?sslmode=disable
+    command: migrate sql -e --yes
+    networks:
+      - hydra-net
+
+  hydra-admin:
+    image: oryd/hydra:v2.2
+    depends_on:
+      - hydra-migrate
+    environment:
+      - DSN=postgres://hydra:secret@postgres:5432/hydra?sslmode=disable
+      - URLS_SELF_ISSUER=http://hydra-public:4444
+      - SECRETS_SYSTEM=thisaverysecretkey123
+    command: serve admin --dev
+    ports:
+      - "4445:4445"
+    networks:
+      - hydra-net
+
+  hydra-public:
+    image: oryd/hydra:v2.2
+    depends_on:
+      - hydra-migrate
+    environment:
+      - DSN=postgres://hydra:secret@postgres:5432/hydra?sslmode=disable
+      - URLS_SELF_ISSUER=http://hydra-public:4444
+      - SECRETS_SYSTEM=thisaverysecretkey123
+    command: serve public --dev
+    ports:
+      - "4444:4444"
+    networks:
+      - hydra-net
 
 volumes:
   db_data:
+  hydra-data:
+
+networks:
+  hydra-net:
