--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
       "start": "node src/app.js"
     },
     "dependencies": {
+      "jsonwebtoken": "^9.0.0",
       "express": "^4.18.2",
       "mysql2": "^3.0.0",
       "dotenv": "^16.0.0",
       "swagger-ui-express": "^4.6.0",
+      "jwks-rsa": "^2.0.5",
       "express-validator": "^6.15.0"
     }
   }
